Alteração no design

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <span>
-        <div id="carouselExampleIndicators" class="carousel slide fundo" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="~/images/carrousel/image1.png" class="carrousel-images" alt="...">
@@ -23,14 +23,9 @@
           </div>
     </span>
 
-    <main class="fundo">
+    <main class="">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm">
-                    <a href="#"><img src="~/images/conteudo/chat.jpg" alt="Link do chat de apoio"
-                            class="imagens"></a>
-                    <br>
-                </div>
                 <div class="col-sm">
                     <a href="#"><img src="~/images/conteudo/teste.jpg"
                             alt="Link para o conteudo descritivo sobre autismo" class="imagens"></a>
@@ -43,11 +38,6 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm home-fundo">
-                    <h1>Chat de apoio</h1>
-                    <p class="paragrafo">Conte sua história, ou lei a história de outras pessoas que sofrem ou possuem o
-                        transtorno do espectro autista</p>
-                </div>
                 <div class="col-sm home-fundo">
                     <h1>Sobre o autismo</h1>
                     <p class="paragrafo">Leia sobre o que é o autismo, suas características, como foi descoberto, como
