--- a/Views/Home/UserLogin.cshtml
+++ b/Views/Home/UserLogin.cshtml
@@ -6,7 +6,7 @@
 <form method="post" action="/Home/Logar">
     <div class="main-login">
         <div class="left-login">
-            <img src="~/images/SVG/autism-animate.svg" class="left-login-image" alt="Austimo Animação">
+            <img src="~/images/SVG/Autism.gif" class="left-login-image" alt="Austimo Animação">
         </div>
         <div class="right-login">
             <div class="card-login">
