--- a/Views/Home/UserRedSenha.cshtml
+++ b/Views/Home/UserRedSenha.cshtml
@@ -6,7 +6,7 @@
 <form method="post" action="/Home/Redefinir">
    <div class="main-login">
         <div class="left-login">
-            <img src="~/images/SVG/autism-animate.svg" class="left-login-image" alt="Austimo Animação">
+            <img src="~/images/SVG/login.gif" class="left-login-image" alt="Austimo Animação">
         </div>
         <div class="left-login">
             <div class="card-login">
