--- a/Views/Home/MedCadastro.cshtml
+++ b/Views/Home/MedCadastro.cshtml
@@ -1,10 +1,12 @@
 @{
     ViewData["Title"] = "Cadastro médico";
 }
-<form action="">
+
+@model MedCadastroModel
+<form method="post" action="/Home/Cadastro">
     <div class="main-login">
         <div class="left-login">
-            <img src="~/images/SVG/autism-animate.svg" class="left-login-image" alt="Austimo Animação">
+            <img src="~/images/SVG/Doctors.gif" class="left-login-image" alt="Austimo Animação">
         </div>
         <div class="right-login">
             <div class="card-log">
@@ -13,44 +15,50 @@
                     <div>
                         <div class="textfield">
                             <label for="Area de Atuação">Formação</label>
-                            <select name="formacao" id="formacao" required>
-                                <option value="" selected></option>
+                               <select name="Formacao" id="formacao" required>
                                 <option value="Fonoaudiologo">Fonoaudiologo</option>
                                 <option value="Psicologo">Psicólogo</option>
                                 <option value="Terapeuta">Terapeuta</option>
+                                <option value="" selected>Escolha sua Profissão</option>
                             </select>
                         </div>
                         <div class="textfield">
-                            <label for="usuario">Nome</label>
-                            <input type="text" name="usuario" placeholder="Nome completo" required>
+                            <label for="Usuario">Nome</label>
+                            <input type="text" name="Usuario" placeholder="Nome completo" required maxlength="30">
                         </div>
                         <div class="textfield">
                             <label for="Email">Email</label>
-                            <input type="password" name="Email" placeholder="Email" required>
+                            <input type="email" name="Email" placeholder="Email" required maxlength="50">
                             <div class="d-flex" style="margin-bottom: 2%; margin-top: 6%;">
-                                <input type="checkbox" name="" id="" class="check">
+                                <input type="checkbox" name="" id="" class="check" required>
                                 <label class="link">Aceito os termos de uso</label>
                             </div>
-                            <a class="link" asp-controller="Home" asp-action="LoginMedico">Já sou cadastrado</a>
-                            <a class="link" asp-controller="Home" asp-action="">Esqueci minha senha</a>
+                            <a class="link" asp-controller="Home" asp-action="MedLogin">Já sou cadastrado</a>
                         </div>
                     </div>
                     <div>
                         <div class="textfield" style="margin-left: 4%;">
                             <label for="senha">Senha</label>
-                            <input type="password" name="senha" placeholder="Senha" required>
+                            <input type="password" name="Password" placeholder="Senha" required maxlength="20">
                         </div>
                         <div class="textfield" style="margin-left: 4%;">
                             <label for="telefone">Telefone de contato</label>
-                            <input type="tel" name="tel" id="tel" placeholder="Telefone">
+                            <input type="tel" name="tel" id="Tel" placeholder="Telefone" required>
                         </div>
                         <div class="textfield" style="margin-left: 4%;">
                             <label for="Localização física">Localização física</label>
-                            <input type="text" name="Local" id="Local" placeholder="CEP (opicional)" required>
+                            <input type="text" name="cep" id="cep" placeholder="CEP (opicional)">
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Cadastrar" class="btn-login">
+                <input type="submit" value="Cadastro" class="btn-login">
             </div>
         </div>
 </form>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+<script>
+    $('#cep').mask('00000-000');
+    $('#tel').mask('(00) 0000-0000');
+</script>
