--- a/Views/Home/UserCadastro.cshtml
+++ b/Views/Home/UserCadastro.cshtml
@@ -3,10 +3,10 @@
 }
 @model CadastroModel
 
-<form asp-controller="Home" asp-action="UserCadastro">
+<form method="post" action="/Home/Cadastrar">
     <div class="main-login">
         <div class="left-login">
-            <img src="~/images/SVG/autism-animate.svg" class="left-login-image" alt="Austimo Animação">
+            <img src="~/images/SVG/Cadastro.gif" class="left-login-image" alt="Austimo Animação">
         </div>
         <div class="right-login">
             <div class="card-login">
@@ -38,6 +38,22 @@
                     </div>
                 </div>
                 <input type="submit" value="Cadastrar" class="btn-login">
+                @if (TempData["Erro"] != null)
+                {
+                    <div class="d-flex">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-exclamation-diamond-fill alert-color alert-message" viewBox="0 0 16 16">
+                                <path
+                                    d="M9.05.435c-.58-.58-1.52-.58-2.1 0L.436 6.95c-.58.58-.58 1.519 0 2.098l6.516 6.516c.58.58 1.519.58 2.098 0l6.516-6.516c.58-.58.58-1.519 0-2.098L9.05.435zM8 4c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995A.905.905 0 0 1 8 4zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
+                            </svg>
+                        </div>
+
+                        <div class="alert-color">
+                            @TempData["Erro"]
+                        </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
