--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,16 +2,25 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/css/TCC_Final.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true">
     <link rel="stylesheet" href="~/css/UserCadastro.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/TCC_Final.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Contatos.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/descritivo.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/AreaMed.css" asp-append-version="true">
     <a href="https://storyset.com/people"></a>
+    <a href="https://storyset.com/online"></a>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
-<body>
+<body class="fundo">
     <header>
         <div class="container-fluid bg-dark">
             <div class="d-flex">
@@ -55,7 +64,7 @@
                                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                               </svg>Usuários</a></li>
 
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="LoginMedico"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-gear person" viewBox="0 0 16 16">
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="MedLogin"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-gear person" viewBox="0 0 16 16">
                                 <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm.256 7a4.474 4.474 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10c.26 0 .507.009.74.025.226-.341.496-.65.804-.918C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4s1 1 1 1h5.256Zm3.63-4.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382l.045-.148ZM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z"/>
                               </svg>Profissionais</a></li>
                         </ul>
@@ -63,10 +72,10 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-sm" style="background-color: #0B96A8;">
+        <nav class="navbar navbar-expand-sm" style="background-color: white;">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                    <img src="~/images/logo/logo-finalizada.png" alt="Logotipo">
+                    <a asp-controller="Home" asp-action="Index"><img src="~/images/logo/logoF.png" alt="Logotipo" style="cursor: pointer;"></a>
                 </div>
                 <ul class="navbar-nav justify-content-center">
                     <div class="dropdown">
@@ -75,39 +84,37 @@
                             Arquivos
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item drop-item" href="#" >Noticias</a></li>
                             <li><a class="dropdown-item drop-item" href="#">Pais</a></li>
                             <li><a class="dropdown-item drop-item" href="#">Educação</a></li>
-                            <li><a class="dropdown-item drop-item" href="#">Brincadeiras</a>
+                            <li><a class="dropdown-item drop-item" asp-action="Brincadeiras" asp-controller="Home">Brincadeiras</a>
                             <li><a class="dropdown-item drop-item" href="#">Todos</a></li>
                         </ul>
                     </div>
-                    <li class="nav-item"><a href="#" class="testo" id="nav-text">Teste</a></li>
-                    <li class="nav-item"><a href="#" class="testo"
-                            id="nav-text">Jogos</a></li>
                     <div class="dropdown">
                         <a class="dropdown-toggle testo" href="#" role="button" id="dropdownMenuLink"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Contatos
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item drop-item" href="#">Psicólogo</a></li>
+                            <li><a class="dropdown-item drop-item" asp-controller="Home" asp-action="ContatoFono">Psicólogo</a></li>
                             <li><a class="dropdown-item drop-item" href="#">Fonoaudiólogo</a></li>
-                            <li><a class="dropdown-item drop-item" href="#">Pisicopedagogo</a></li>
-                            <li><a class="dropdown-item drop-item" href="#">Terapeuta ocupacional</a></li>
-                            <li><a class="dropdown-item drop-item" href="#">Pesuisar profissionais</a></li>
+                            <li><a class="dropdown-item drop-item" href="#">Terapeuta</a></li>
                         </ul>
                     </div>
+                    <li class="nav-item"><a href="#" class="testo"
+                            id="nav-text">Jogos</a></li>
                     <li class="nav-item"><a href="#" class="testo" id="nav-text">Sobre nós</a>
                     </li>
+                     <li class="nav-item"><a class="testo" id="nav-text" asp-controller="Home" asp-action="AreaMed">profissional</a></li>
                 </ul>
                 <form action="" class="d-flex">
-                    <input type="text" name="pesq" id="pesq" placeholder="pesquisar" class="form-control me-2">
-                    <button class="lupa"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    <input type="text" name="pesq" id="pesq" placeholder="pesquisar" class="pesquisar">
+                    <button class="lupa"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                             fill="currentColor" class="bi bi-search user" style="color: black;" viewBox="0 0 16 16">
                             <path
                                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                        </svg></button>
+                    </svg></button>
                 </form>
             </div>
         </nav>
