--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend&family=Tektur:wght@600&display=swap');
+.pesquisar
+{
+    height: 6vh;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: 10px;
+    margin-top: 5px;
+    background-color: rgb(231, 227, 227);
+    width: 30vh;
+    color: black;
+}
+
 .lupa
 {
-    background-color: #0B96A8;
+    background-color: white;
     border: none;
 }
 
@@ -25,14 +40,15 @@
 .fundo
 {
     background-color: #4F94EA;
+    height: auto;
     color: black;
 }
 
 .user
 {
     color: white;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-top: 8px;
     margin-bottom: 8px;
     margin-right: 10px;
