Area de profissionais

--- a/Views/Home/MedCadastro.cshtml
+++ b/Views/Home/MedCadastro.cshtml
@@ -46,8 +46,8 @@
                             <input type="tel" name="tel" id="Tel" placeholder="Telefone" required>
                         </div>
                         <div class="textfield" style="margin-left: 4%;">
-                            <label for="Localização física">Localização física</label>
-                            <input type="text" name="cep" id="cep" placeholder="CEP (opicional)">
+                            <label for="Localização física">Localização física (opcional)</label>
+                            <input type="text" name="cep" id="cep">
                         </div>
                     </div>
                 </div>
