--- a/Views/Home/MedLogin.cshtml
+++ b/Views/Home/MedLogin.cshtml
@@ -13,7 +13,7 @@
                 <h1>Login</h1>
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="email" name="Email" placeholder="Email" required maxlength="30">
+                    <input type="text" name="Email" placeholder="Email" required maxlength="30">
                 </div>
                 <div class="textfield">
                     <label for="senha"> Senha</label>
