--- a/Views/Home/AreaMed.cshtml
+++ b/Views/Home/AreaMed.cshtml
@@ -1,23 +1,29 @@
 <div class="container color">
     <div class="row box-information">
         <div class="col-sm informations">
-            <h1>Nome do profissional</h1>
-            <p>Antônio Gabriel da Silva</p>
+            <div class="details">
+                <h1>Nome do profissional</h1>
+                <p>Antônio Gabriel da Silva</p>
 
-            <h1>Formação</h1>
-            <p>Psicologia</p>
+                <h1>Formação</h1>
+                <p>Psicologia</p>
 
-            <h1>Email</h1>
-            <p>Gabriel@gmail.com</p>
+                <h1>Email</h1>
+                <p>Gabriel@gmail.com</p>
 
-            <h1>Telefone</h1>
-            <p>16 996031315</p>
+                <h1>Telefone</h1>
+                <p>16 996031315</p>
 
-            <h1>Localização</h1>
-            <p>Taquaritinga</p>
+                <h1>Localização</h1>
+                <p>Taquaritinga</p>
+                <div class="change-buttons">
+                    <button class="Red-cadastro">Alterar informações</button>
+                </div>
+            </div>
         </div>
         <div class="col-sm">
-            <div>
+            <div class="foto-div">
+                <h1>Foto de Perfil</h1>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-file-image MedPicture" viewBox="0 0 16 16">
                     <path d="M8.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
@@ -25,14 +31,14 @@
                         d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8l-2.083-2.083a.5.5 0 0 0-.76.063L8 11 5.835 9.7a.5.5 0 0 0-.611.076L3 12V2z" />
                 </svg>
             </div>
-            <div class="input-group mb-3">
-                <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon03">Button</button>
-                <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03"
-                    aria-label="Upload">
-            </div>
 
-            <div class="change-buttons">
-                <button class="Red-cadastro">Alterar informações</button>
+            <div>
+                <form>
+                    <input type="file" name="perfil" id="perfil" class="file">
+                    <button class="foto-button">Cadastrar foto</button>
+                    <input type="file" name="diploma" id="diploma" class="file">
+                    <button class="diploma-button">Cadastrar diploma</button>
+                </form>
             </div>
         </div>
     </div>
