--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="~/css/Contatos.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/descritivo.css" asp-append-version="true">
     <link rel="stylesheet" href="~/css/AreaMed.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/Games.css" asp-append-version="true">
     <a href="https://storyset.com/people"></a>
     <a href="https://storyset.com/online"></a>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
 <body class="fundo">
     <header>
@@ -101,9 +101,8 @@
                             <li><a class="dropdown-item drop-item" href="#">Terapeuta</a></li>
                         </ul>
                     </div>
-                    <li class="nav-item"><a href="#" class="testo"
-                            id="nav-text">Jogos</a></li>
-                    <li class="nav-item"><a href="#" class="testo" id="nav-text">Sobre nós</a>
+                    <li class="nav-item"><a class="testo" id="nav-text" asp-controller="Home" asp-action="Games">Jogos</a></li>
+                    <li class="nav-item"><a asp-conroller="Home" asp-action="Sobre" class="testo" id="nav-text">Sobre nós</a>
                     </li>
                      <li class="nav-item"><a class="testo" id="nav-text" asp-controller="Home" asp-action="AreaMed">profissional</a></li>
                 </ul>
