--- a/wwwroot/css/AreaMed.css
+++ b/wwwroot/css/AreaMed.css
@@ -1,43 +1,22 @@
-
-.box-information
-{
-    background-color: rgba(255, 255, 255, 0.9);
+.box-information {
+    background-color: rgba(241, 241, 241, 0.9);
     border-radius: 6px;
     margin-top: 3%;
-}
-.informations
-{
-    text-align: justify;
-    margin-left: 3%;
+    padding-bottom: 2%;
 }
 
-.informations > h1
-{
-    color: rgb(31, 121, 121);
-    font-size: 35px;
-    margin-top: 3%;
-}
-
-.informations > p
-{
-    font-size: 25px;
-}
-
-.MedPicture
-{
-    margin-top: 6%;
+.MedPicture {
+    margin-top: 10%;
+    margin-bottom: 3%;
     width: 45vh;
-    height:45vh;
+    height: 45vh;
 }
 
-.change-buttons
-{
-    margin-top: 15%;
-   
+.change-buttons {
+    margin-left: 22%;
 }
 
-.Red-cadastro
-{
+.Red-cadastro {
     width: auto;
     padding-left: 2%;
     padding-right: 2%;
@@ -47,16 +26,90 @@
     border: none;
     border-radius: 8px;
     outline: none;
-    font-weight: 800;
     color: black;
     background-color: #4F94EA;
-    cursor: pointer;
     font-family: "Lexend", Arial, Helvetica, sans-serif;
-    box-shadow: 0px 10px 40px -12px #28314dd7;
 }
 
-.profile
+input[type="file"]::file-selector-button {
+    background-color: lightcyan;
+    border-radius: 7px;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    outline: none;
+    border: none;
+}
+
+input[type="file"] {
+    border: solid black 1px;
+    margin-left: 3px;
+    border-radius: 7px;
+}
+
+.file {
+    margin-top: 4%;
+    background-color: white;
+    width: 65%;
+}
+
+.details {
+    background-color: white;
+    margin-top: 4%;
+    border-radius: 7px;
+    text-align: justify;
+    padding-left: 6%;
+    padding-bottom: 1%;
+    padding-top: 1%;
+}
+
+details > h1{
+    color: rgb(31, 121, 121);
+    font-size: 35px;
+}
+
+.foto-div
 {
-    margin-top: 5%;
+margin-top: 11%;
+}
+
+.details > h1
+{
+    color: rgb(31, 121, 121);
+    font-size: 35px;
+    margin-top: 6%;
+}
+
+.foto-div > h1
+{
+    color: rgb(31, 121, 121);
+    font-size: 35px;
+    margin-top: 6%;
+}
+
+.details > p {
+    font-size: 25px;
+}
+
+.foto-button {
+    outline: none;
+    padding-top: 1.2%;
+    padding-bottom: 1.2%;
+    padding-left: 3.3%;
+    padding-right: 3.3%;
+    border: solid black 1px;
+    border-radius: 7px;
+    background-color: #4F94EA;
+}
+
+.diploma-button
+{
+        outline: none;
+        padding-top: 1.2%;
+        padding-bottom: 1.2%;
+        border: solid black 1px;
+        border-radius: 7px;
+        background-color: #4F94EA; 
 }
 
